# find-my-next-place

./: .gitignore  README.md  config.example.json  pyproject.toml
docs/superpowers/plans/: 2026-05-15-find-my-next-place.md
docs/superpowers/specs/: 2026-05-15-find-my-next-place-design.md
find_my_next_place/: __main__.py  config.py  scheduler.py
find_my_next_place/notify/: telegram.py
find_my_next_place/pipeline/: cycle.py  geo.py  llm.py  rules.py
find_my_next_place/scrapers/: base.py  craigslist.py  zillow.py
find_my_next_place/storage/: db.py  migrations.py
find_my_next_place/web/: app.py
find_my_next_place/web/static/: style.css
find_my_next_place/web/templates/: base.html  listing.html  queue.html
tests/: test_base.py  test_config.py  test_cycle.py  test_e2e.py  test_geo.py  test_llm.py  test_rules.py  test_scheduler.py  test_smoke.py  test_storage.py  test_telegram.py  test_web.py
tests/scrapers/: test_craigslist.py  test_zillow.py
tests/scrapers/fixtures/craigslist/: sample_rss.xml
tests/scrapers/fixtures/zillow/: sample_search.html
